deployments/kubernetes/tirelease/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tirelease
  namespace: tirelease
spec:
  ports:
    - name: http # 请为所有端口指定名称
      port: 80 # 对外开放的服务端口
      targetPort: 8080 # 后方 pod 的服务端口
  selector:
    app: tirelease
